// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentStatusCell should render 1`] = `
<td
  className=""
>
  Member
</td>
`;

exports[`CurrentStatusCell should render as a non-member 1`] = `
<td
  className=""
>
  Non-member
</td>
`;
